--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>CCC</title>
+    <title>Covid Checker</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
     <div id="genCon"></div>
 
     <footer>
-        <p>Umeadi Ifeanyi</p>
+        <h2>Umeadi Ifeanyi</h2>
     </footer>
 
     <script src="./tasks/task_one.js"></script>
